samples/_failures_safe/1761507873_af8552_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65baebf2.c: In function ‘main’:
./samples/SAFE/__tmp_65baebf2.c:201:17: error: expected ‘;’ at end of input
  201 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_65baebf2.c:201:9: error: expected declaration or statement at end of input
  201 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_65baebf2.c:201:9: error: expected declaration or statement at end of input
